# RefrigeratorMonitor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  db_manager.cpp  kt_utility.h
src/sqlite3/: CMakeLists.txt
